tests/bad/UndefinedVariable2.ml
x := 3 (* Variable not found. *)
